packages/typ/tests/fixtures/diagnostics/0331_fun_monomorphic_int_bool_use_10.ml.infer.expected
File "0331_fun_monomorphic_int_bool_use_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0331_fun_monomorphic_int_bool_use_10 is not a valid module name.

File "0331_fun_monomorphic_int_bool_use_10.ml", line 1, characters 26-30:
1 | let use_kappa f = (f 9, f true)
                              ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
